--- a/templates/main.html
+++ b/templates/main.html
@@ -8,11 +8,26 @@
 </head>
 <body>
 <h1>Team 3</h1>
-    <div class="row">
+<ul>
+<a href="{{ url_for('member', name='Emeka') }}"><li>Emeka</li></a>
+<a href="{{ url_for('member', name='Callum') }}"><li>Callum</li></a>
+<a href="{{ url_for('member', name='Will') }}"><li>Will</li></a>
+<a href="{{ url_for('member', name='Kevin') }}"><li>Kevin</li></a>
+</ul>
+
+
+
+
+</body>
+</html>
+
+
+
+    <!-- <div class="row">
         <div class="column">
         <figure>
           <img src="{{url_for('static', filename='emeka.jpeg')}}" alt="emeka" style="width:10%">
-          <figcaption class="caption">Emeka</figcaption>
+          <a href="/localhost:5000/names/emeka.html" method="POST"><figcaption class="caption">Emeka</figcaption></a>
         </figure>
         </div>
         <div class="column">
@@ -33,7 +48,5 @@
           <figcaption class="caption">Will Irving</figcaption>
         </figure>
         </div>
-    </div>
+    </div> -->
 
-</body>
-</html>
