added all the team members to one page and added an error page

--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
     <title>Team Tardis</title>
 </head>
 <body>
-<h1>Team 3</h1>
+<h1>Team Tardis</h1>
 <ul>
 <a href="{{ url_for('member', name='Emeka') }}"><li>Emeka</li></a>
 <a href="{{ url_for('member', name='Callum') }}"><li>Callum</li></a>
@@ -21,32 +21,4 @@
 </body>
 </html>
 
-
-
-    <!-- <div class="row">
-        <div class="column">
-        <figure>
-          <img src="{{url_for('static', filename='emeka.jpeg')}}" alt="emeka" style="width:10%">
-          <a href="/localhost:5000/names/emeka.html" method="POST"><figcaption class="caption">Emeka</figcaption></a>
-        </figure>
-        </div>
-        <div class="column">
-          <figure>
-          <img src="{{url_for('static', filename='kevin.jpeg')}}" alt="kevin" style="width:10%">
-          <figcaption class="caption">Kevin</figcaption>
-        </figure>
-        </div>
-        <div class="column">
-          <figure>
-          <img src="{{url_for('static', filename='callum.jpeg')}}" alt="callum" style="width:10%">
-          <figcaption class="caption">Callum</figcaption>
-        </figure>
-        </div>
-        <div class="column">
-          <figure>
-          <img src="{{url_for('static', filename='will.jpeg')}}" alt="will" style="width:10%">
-          <figcaption class="caption">Will Irving</figcaption>
-        </figure>
-        </div>
-    </div> -->
 
