--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team Tardis</title>
-</head>
-<body>
-<h1>Team Tardis</h1>
+{% extends "base.html" %}
+{% block title %}Team Tardis{% endblock %}
+{% block content %}
 <ul>
 <a href="{{ url_for('member', name='Emeka') }}"><li>Emeka</li></a>
 <a href="{{ url_for('member', name='Callum') }}"><li>Callum</li></a>
 <a href="{{ url_for('member', name='Will') }}"><li>Will</li></a>
 <a href="{{ url_for('member', name='Kevin') }}"><li>Kevin</li></a>
 </ul>
+{% endblock %}
 
 
 
 
-</body>
-</html>
 
 
